CORE-1215 - Fixed layout issues with the outcome history

--- a/runtime/css/history.less
+++ b/runtime/css/history.less
@@ -27,13 +27,13 @@ permissions and limitations under the License.
         .history-row {
             margin-bottom: 100px;
 
-            &:first-child {
+            .step {
                 cursor: pointer;
-            }
 
-            .step-title {
-                font-size: 20px;
-                text-align: center;
+                .step-title {
+                    font-size: 20px;
+                    text-align: center;
+                }
             }
 
             .outcome-info {
@@ -41,14 +41,7 @@ permissions and limitations under the License.
                 background: rgba(221,221,221,0.6);
                 text-align: center;
                 color: #333333;
-            }
-
-            .outcome-even {
-                margin-left: 1%;
-            }
-
-            .outcome-odd {
-                margin-left: 2%;
+                margin-left: 1.5%;
             }
 
             .selected-outcome {
